tests/errors/function_missing_required_with_defaults.py
# expect_error: missing 1 required positional argument
def add(a, b=2):
    return a + b

print(add())